modules/DataContractDsl/org.mod4j.dsl.datacontract.xtext/src-gen/org/mod4j/dsl/datacontract/parser/DataContractDslParser.java
// $ANTLR 3.0 ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g 2008-09-09 14:56:42

package org.mod4j.dsl.datacontract.parser;

import org.eclipse.emf.ecore.EObject;

import org.openarchitectureware.xtext.parser.impl.AntlrUtil;
import org.openarchitectureware.xtext.XtextFile;
import org.openarchitectureware.xtext.parser.impl.EcoreModelFactory;
import org.openarchitectureware.xtext.parser.ErrorMsg;
import org.openarchitectureware.xtext.parser.model.ParseTreeManager;
import org.openarchitectureware.xtext.parser.parsetree.Node;

import org.mod4j.dsl.datacontract.MetaModelRegistration;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class DataContractDslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_ID", "RULE_STRING", "RULE_INT", "RULE_WS", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "'DataContract'", "'import'", "'DomainDto'", "'base'", "'['", "']'", "'ListDto'", "'CustomDto'", "';'", "'boolean'", "'string'"
    };
    public static final int RULE_ML_COMMENT=8;
    public static final int RULE_ID=4;
    public static final int RULE_WS=7;
    public static final int EOF=-1;
    public static final int RULE_INT=6;
    public static final int RULE_STRING=5;
    public static final int RULE_SL_COMMENT=9;

        public DataContractDslParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[19+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g"; }



    	private Token getLastToken() {
    		return input.LT(-1);
    	}
    	private Token getNextToken() {
    		return input.LT(1);
    	}

    	private int line() {
    		Token t = getNextToken();
    		if (t==null)
    			return 1;
    		return t.getLine();
    	}

    	private int start() {
    		Token t = getNextToken();
    		if (t==null)
    			return 0;
    		if (t instanceof CommonToken) {
    			return ((CommonToken)t).getStartIndex();
    		}
    		return t.getTokenIndex();
    	}

    	private int end() {
    		Token t = getLastToken();
    		if (t==null)
    			return 1;
    		if (t instanceof CommonToken) {
    			return ((CommonToken)t).getStopIndex()+1;
    		}
    		return t.getTokenIndex();
    	}

    	protected Object convert(Object arg) {
    		if (arg instanceof org.antlr.runtime.Token) {
    			Token t = (Token) arg;
    			String s = t.getText();
    			if (t.getType() == DataContractDslLexer.RULE_ID && s.startsWith("^")) {
    				return s.substring(1);
    			} else if (t.getType()==DataContractDslLexer.RULE_STRING) {
    				return s.substring(1,s.length()-1);
    			} else if (t.getType()==DataContractDslLexer.RULE_INT) {
    				return Integer.valueOf(s);
    			}
    			return s;
    		}
    		return arg;
    	}


    	private EcoreModelFactory factory = new EcoreModelFactory(MetaModelRegistration.getEPackage());
        private ParseTreeManager ptm = new ParseTreeManager();
    	private XtextFile xtextfile = MetaModelRegistration.getXtextFile();
    	
    	{
    			factory.addImport("", "http://www.mod4j.org/datacontract");
    		
    	}

    	public ParseTreeManager getResult() {
    		return ptm;
    	}

    	private List<ErrorMsg> errors = new ArrayList<ErrorMsg>();
    	public List<ErrorMsg> getErrors() {
    		return errors;
    	}

    	@Override
    		public void reportError(RecognitionException e) {
    		String msg = super.getErrorMessage(e,tokenNames);
    		errors.add(AntlrUtil.create(msg,e,tokenNames));
    			ptm.addError(msg, e);
    			ptm.ruleFinished(null, end());
    		}




    // $ANTLR start parse
    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:122:1: parse returns [Node r] : result= ruleDataContractModel EOF ;
    public Node parse() throws RecognitionException {
        Node r = null;
        int parse_StartIndex = input.index();
        EObject result = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return r; }
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:123:3: (result= ruleDataContractModel EOF )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:123:3: result= ruleDataContractModel EOF
            {
            pushFollow(FOLLOW_ruleDataContractModel_in_parse67);
            result=ruleDataContractModel();
            _fsp--;
            if (failed) return r;
            match(input,EOF,FOLLOW_EOF_in_parse69); if (failed) return r;
            if ( backtracking==0 ) {
              ptm.ruleFinished(result,end());r = ptm.getCurrent();
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, parse_StartIndex); }
        }
        return r;
    }
    // $ANTLR end parse


    // $ANTLR start ruleDataContractModel
    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:126:1: ruleDataContractModel returns [EObject result] : ( ( 'DataContract' ) (temp_name= RULE_ID ) (temp_domainClasses= ruleDomainClassReference )* (temp_dtos= ruleDto )* ) ;
    public EObject ruleDataContractModel() throws RecognitionException {
        EObject result = null;
        int ruleDataContractModel_StartIndex = input.index();
        Token temp_name=null;
        EObject temp_domainClasses = null;

        EObject temp_dtos = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:127:4: ( ( ( 'DataContract' ) (temp_name= RULE_ID ) (temp_domainClasses= ruleDomainClassReference )* (temp_dtos= ruleDto )* ) )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:127:4: ( ( 'DataContract' ) (temp_name= RULE_ID ) (temp_domainClasses= ruleDomainClassReference )* (temp_dtos= ruleDto )* )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "DataContractModel");
              				ptm.setModelElement(result);
              			 
            }
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:131:1: ( ( 'DataContract' ) (temp_name= RULE_ID ) (temp_domainClasses= ruleDomainClassReference )* (temp_dtos= ruleDto )* )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:131:2: ( 'DataContract' ) (temp_name= RULE_ID ) (temp_domainClasses= ruleDomainClassReference )* (temp_dtos= ruleDto )*
            {
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:131:2: ( 'DataContract' )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:131:3: 'DataContract'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(0)),line(),start());
            }
            match(input,10,FOLLOW_10_in_ruleDataContractModel91); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }

            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:133:1: (temp_name= RULE_ID )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:133:2: temp_name= RULE_ID
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(1)),line(),start());
            }
            temp_name=(Token)input.LT(1);
            match(input,RULE_ID,FOLLOW_RULE_ID_in_ruleDataContractModel100); if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"name",convert(temp_name),false); ptm.ruleFinished(temp_name,end()); 
            }

            }

            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:136:1: (temp_domainClasses= ruleDomainClassReference )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==11) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:136:2: temp_domainClasses= ruleDomainClassReference
            	    {
            	    if ( backtracking==0 ) {
            	      ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(2)),line(),start());
            	    }
            	    pushFollow(FOLLOW_ruleDomainClassReference_in_ruleDataContractModel111);
            	    temp_domainClasses=ruleDomainClassReference();
            	    _fsp--;
            	    if (failed) return result;
            	    if ( backtracking==0 ) {
            	      factory.add(result,"domainClasses",convert(temp_domainClasses),false); ptm.ruleFinished(temp_domainClasses,end()); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:139:1: (temp_dtos= ruleDto )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==12||(LA2_0>=16 && LA2_0<=17)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:139:2: temp_dtos= ruleDto
            	    {
            	    if ( backtracking==0 ) {
            	      ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(3)),line(),start());
            	    }
            	    pushFollow(FOLLOW_ruleDto_in_ruleDataContractModel123);
            	    temp_dtos=ruleDto();
            	    _fsp--;
            	    if (failed) return result;
            	    if ( backtracking==0 ) {
            	      factory.add(result,"dtos",convert(temp_dtos),false); ptm.ruleFinished(temp_dtos,end()); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, ruleDataContractModel_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleDataContractModel


    // $ANTLR start ruleDto
    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:144:1: ruleDto returns [EObject result] : (temp_domainclassdto= ruleDomainClassDto | temp_listdto= ruleListDto | temp_customdto= ruleCustomDto );
    public EObject ruleDto() throws RecognitionException {
        EObject result = null;
        int ruleDto_StartIndex = input.index();
        EObject temp_domainclassdto = null;

        EObject temp_listdto = null;

        EObject temp_customdto = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:145:9: (temp_domainclassdto= ruleDomainClassDto | temp_listdto= ruleListDto | temp_customdto= ruleCustomDto )
            int alt3=3;
            switch ( input.LA(1) ) {
            case 12:
                {
                alt3=1;
                }
                break;
            case 16:
                {
                alt3=2;
                }
                break;
            case 17:
                {
                alt3=3;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("144:1: ruleDto returns [EObject result] : (temp_domainclassdto= ruleDomainClassDto | temp_listdto= ruleListDto | temp_customdto= ruleCustomDto );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:145:9: temp_domainclassdto= ruleDomainClassDto
                    {
                    pushFollow(FOLLOW_ruleDomainClassDto_in_ruleDto153);
                    temp_domainclassdto=ruleDomainClassDto();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_domainclassdto;
                    }

                    }
                    break;
                case 2 :
                    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:145:88: temp_listdto= ruleListDto
                    {
                    pushFollow(FOLLOW_ruleListDto_in_ruleDto168);
                    temp_listdto=ruleListDto();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_listdto;
                    }

                    }
                    break;
                case 3 :
                    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:145:146: temp_customdto= ruleCustomDto
                    {
                    pushFollow(FOLLOW_ruleCustomDto_in_ruleDto183);
                    temp_customdto=ruleCustomDto();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_customdto;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 3, ruleDto_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleDto


    // $ANTLR start ruleDomainClassReference
    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:147:1: ruleDomainClassReference returns [EObject result] : ( ( 'import' ) (temp_name= RULE_ID ) ) ;
    public EObject ruleDomainClassReference() throws RecognitionException {
        EObject result = null;
        int ruleDomainClassReference_StartIndex = input.index();
        Token temp_name=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:148:4: ( ( ( 'import' ) (temp_name= RULE_ID ) ) )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:148:4: ( ( 'import' ) (temp_name= RULE_ID ) )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "DomainClassReference");
              				ptm.setModelElement(result);
              			 
            }
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:152:1: ( ( 'import' ) (temp_name= RULE_ID ) )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:152:2: ( 'import' ) (temp_name= RULE_ID )
            {
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:152:2: ( 'import' )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:152:3: 'import'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(0)),line(),start());
            }
            match(input,11,FOLLOW_11_in_ruleDomainClassReference206); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }

            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:154:1: (temp_name= RULE_ID )
            // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:154:2: temp_name= RULE_ID
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(1)),line(),start());
            }
            temp_name=(Token)input.LT(1);
            match(input,RULE_ID,FOLLOW_RULE_ID_in_ruleDomainClassReference215); if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"name",convert(temp_name),false); ptm.ruleFinished(temp_name,end()); 
            }

            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 4, ruleDomainClassReference_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleDomainClassReference


    // $ANTLR start ruleDomainClassDto
    // ..//org.mod4j.dsl.datacontract.xtext/src-gen//org/mod4j/dsl/datacontract/parser/DataContractDsl.g:159:1: ruleDomainClassDto returns [EObject result] : ( ( 'DomainDto' ) (temp_name= RULE_ID ) ( 'base' ) (temp_base= RULE_ID ) ( '[' ) (temp_properties= ruleProperty )* ( ']' ) ) ;
    public EObject ruleDomainClassDto() throws RecognitionException {
        EObject result = null;
        int ruleDomainClassDto_StartIndex = input.index();
        Token temp_name=null;
        Token temp_base=null;
        EObject temp_properties = null;

